basic impl get user pref
